<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="backClicked"
            android:text="Back" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1" />

        <Button
            android:id="@+id/btnNot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:onClick="notificationsClick"
            android:text="Notifications" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Orders"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/listOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contextClickable="true"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center" />

</LinearLayout>