...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Manager"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
...
            android:lineSpacingExtra="14sp"
            android:onClick="reportsClicked"
            android:text="Reports"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="editUsersClicked"
            android:text="Edit Users"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
...
